# titanic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  test_titanic.py
config/: settings.py
etl/: data_loader.py  feature_engineer.py
mlruns/0/: meta.yaml
mlruns/836947996325845523/: meta.yaml
model/: dummy_classifier.py  gradient_boosting.py  kfold_cross_validator.py  random_forest.py
model/models/: dummyclassifier.joblib  gradientboostingclassifier.joblib  randomforestclassifier.joblib
notebooks/: EDA.ipynb  EDA_preprocessing_f-engineering.ipynb  analysis.ipynb
predict/: predictor.py
test_data/: dummyclassifier.joblib  gradientboostingclassifier.joblib  randomforestclassifier.joblib
train/: train.py  trainer.py
