[tool.poetry]
name = "titanic"
version = "0.1.0"
description = "This package solve the Titanic dataset using ML algorithms as part of a technical assessment"
authors = ["Nestor Rueda <nestormauro@gmail.com>"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
scikit-learn = "^0.24.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
